added pyarrow to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ pins==0.8.4
 pip-tools==7.4.1
 plotly==5.20.0
 prompt-toolkit==3.0.36
+pyarrow==15.0.2
 pydantic==2.7.0
 pydantic_core==2.18.1
 PyJWT==2.8.0
