--- a/requirements.txt
+++ b/requirements.txt
@@ -49,6 +49,7 @@ json5==0.9.25
 jsonpointer==2.4
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
+jupyter==1.0.0
 jupyter-console==6.6.3
 jupyter-events==0.10.0
 jupyter-lsp==2.2.5
